# RMSD-Pred

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
example/: run.sh
src/rmsdpred/: __init__.py  inference.py
src/rmsdpred/data/: data.py  ligand_atom_feature.py  protein_atom_feature.py  utils.py
src/rmsdpred/model/: GatedGCNLSPE.py  model.py
tests/: test_inference.py
