[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmsdpred"
version = "0.1.0"
description = "Protein-ligand binding pose RMSD prediction using graph neural networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jaemin Sim" }
]
dependencies = [
  "torch>=2.7.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "tqdm>=4.60.0",
  "rdkit>=2023.0.0",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "pyyaml>=6.0",
  "requests>=2.25.0",
  "meeko>=0.5.0",
  "gemmi",
  "packaging",
  "torch-geometric>=2.7.0",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.scripts]
rmsdpred = "rmsdpred.inference:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rmsdpred = [
  "weight/random/*.pth",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
